# flask-app

./: .env_example  .gitignore  main.py  pyproject.toml
.ado/: ci-pipeline.yaml  main-pipeline.yaml  self-hosted-main-pipeline.yaml
.azure/: example_initialize_infra.sh
.azure/bicep/: main.bicep
.devcontainer/: devcontainer.json
.github/workflows/: main-gh-pipeline.yaml
templates/: index.html
