[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = "Learn devops pipelines"
authors = ["SzymonJakubiak <szymonjakubiak@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
